Mise a jour COCH 2019

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ header {
         float: left;
         margin: 18px 0 0; }
 
-    header .surin { float: right; }
+    header .coch-logo { float: right; }
 
     header a.date, nav#mobile a.date { 
         float: right;
