--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -759,11 +759,14 @@ footer {
 
         footer .bottom div { float: left; }
 
-    footer .trackie {
-        float: right;
-        font-family: 'Cabin', sans-serif;
-        font-size: 24px;
-        color: #fff; }
+    footer .organizer-logo {
+/*        font-size: 24px;*/
+        color: #fff;
+    }
+    footer .organizer-logo > svg {
+        width: 100%;
+        height: 100%;
+}
 	
 	
 /*** MEDIA QUERIES ***/
