Logo footer (move fast & break things)

--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -760,7 +760,7 @@ footer {
         footer .bottom div { float: left; }
 
     footer .organizer-logo {
-        padding: 1.5em;
+/*        padding: 1.5em;*/
     }
     footer .organizer-text {
         font-size: 24px;
