--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -761,6 +761,11 @@ footer {
 
     footer .organizer-logo {
 /*        padding: 1.5em;*/
+        display: block;
+    }
+    footer .organizer-logo > svg {
+        width: 100%;
+        height: 100%;
     }
     footer .organizer-text {
         font-size: 24px;
@@ -768,10 +773,6 @@ footer {
         font-weight: bold;
         color: #fff;
     }
-    footer .organizer-logo > svg {
-        width: 100%;
-        height: 100%;
-}
 	
 	
 /*** MEDIA QUERIES ***/
