--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -771,6 +771,8 @@ footer {
     }
     footer .organizer-text {
         font-size: 24px;
+        margin-top: 4vw;
+        margin-bottom: .5em;
         font-family: Averta, Avenir, 'Seguoe UI', sans-serif;
         font-weight: bold;
         color: #fff;
