--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -122,7 +122,7 @@ h1 {
     margin: 0 0 30px;
     font-size: 35px;
     font-weight: 700;
-    color: #f5c772;
+    color: #ffa300;
     line-height: normal;
     text-transform: uppercase; }
 
@@ -130,14 +130,14 @@ h2 {
     margin: 0 0 30px;
     font-size: 26px;
     font-weight: 700;
-    color: #f5c772;
+    color: #ffa300;
     line-height: normal; }
 
     h2.slab {
         font-size: 30px;
         font-weight: normal;
         font-family: 'citizen_slabregular';
-        color: #f5c772; }
+        color: #ffa300; }
 
 h2.heading-large {
     font-size: 40px;
@@ -152,7 +152,7 @@ h3 {
     margin: 0 0 15px;
     font-size: 22px;
     font-weight: 700;
-    color: #f5c772;
+    color: #ffa300;
     line-height: normal; }
 
 h4 {
@@ -162,7 +162,7 @@ h4 {
     color: #fff; }
 
 a:link, a:visited { 
-	color: #e57334;
+	color: #ff6900;
 	text-decoration: none; }
 	
 a:hover { color: #fff; }
@@ -204,7 +204,7 @@ header {
             font-family: 'citizen_slabregular';
             font-size: 32px;
             text-align: right;
-            color: #e57334; }
+            color: #ff6900; }
 
         header a.date .left span, nav#mobile a.date .left span { 
             display: block;
@@ -222,7 +222,7 @@ header {
             font-size: 15px; }
 
     header a.date:hover { text-decoration: none; }
-    header a.date:hover .left { color: #e57334; }
+    header a.date:hover .left { color: #ff6900; }
     header a.date:hover .right { color: #fff; }
 
 
@@ -268,7 +268,7 @@ nav {
         color: #f1c471;
         text-decoration: none; }
 
-    nav a.active { color: #e57334; }
+    nav a.active { color: #ff6900; }
 
 nav a.lang { float: right; }
 
@@ -374,7 +374,7 @@ section#homeBanner {
 
         section#homeBanner .content span {
             display: block;
-            color: #f5c772;
+            color: #ffa300;
             font-size: 30px;
             font-weight: normal; }
 
@@ -384,8 +384,8 @@ section#homeBanner {
             font-size: 30px;
             font-weight: normal;
             font-family: 'citizen_slabregular';
-            border-top: 2px dashed #e57334;
-            border-bottom: 2px dashed #e57334; }
+            border-top: 2px dashed #ff6900;
+            border-bottom: 2px dashed #ff6900; }
 
             .big-dashed-cta:hover {
                 color: #fff;
@@ -447,7 +447,7 @@ section.black { background: url(../images/bg.jpg) top center no-repeat; }
         display: inline-block;
         padding: 10px 15px;
         margin: 0 10px 15px;
-        border: 2px dashed #e57334;
+        border: 2px dashed #ff6900;
         border-radius: 3px;
         font-weight: 700; }
 
@@ -467,7 +467,7 @@ section.black { background: url(../images/bg.jpg) top center no-repeat; }
         float: left;
         margin: 0 15px 0 0;
         text-align: right;
-        color: #e57334; }
+        color: #ff6900; }
 
     #schedule .content { overflow: hidden; }
 
@@ -510,8 +510,8 @@ section.black { background: url(../images/bg.jpg) top center no-repeat; }
         font-size: 20px;
         font-weight: normal;
         font-family: 'citizen_slabregular';
-        border-top: 2px dashed #e57334;
-        border-bottom: 2px dashed #e57334; }
+        border-top: 2px dashed #ff6900;
+        border-bottom: 2px dashed #ff6900; }
 
         #latestNews a.btn:hover {
             color: #fff;
@@ -542,7 +542,7 @@ section.black { background: url(../images/bg.jpg) top center no-repeat; }
 
     #photoGallery small {
         display: inline-block;
-        color: #f5c772;
+        color: #ffa300;
         font-size: 0.45em;
         font-weight: normal;
         font-family: 'citizen_slabregular'; }
@@ -564,9 +564,9 @@ section.black { background: url(../images/bg.jpg) top center no-repeat; }
 
     #courseAges h4 {
         padding-bottom: 5px;
-        border-bottom: 2px dashed #E57334; }
+        border-bottom: 2px dashed #ff6900; }
 
-        #courseAges .course:nth-child(even) h4 { border-color: #F5C772; }
+        #courseAges .course:nth-child(even) h4 { border-color: #ffa300; }
 
 
 /*** COURSE MAP ***/
@@ -598,7 +598,7 @@ legend.course span.km10 { background: #0b64c8; }
 
 .results li a {
     padding: 10px 15px;
-    border: 2px dashed #e57334;
+    border: 2px dashed #ff6900;
     border-radius: 3px;
     font-weight: 700; }
 
@@ -650,7 +650,7 @@ legend.course span.km10 { background: #0b64c8; }
         height: 150px;
         display: block;
         margin: 0 auto 25px;
-        border: 4px solid #F5C772;
+        border: 4px solid #ffa300;
         border-radius: 200px;
         line-height: 145px;
         text-align: center;
@@ -684,7 +684,7 @@ form#benevoles label {
         width: 100%;
         float: left;
         padding: 7px 10px;
-        background: #e57334;
+        background: #ff6900;
         border: 0;
         font: inherit;
         text-align: center;
@@ -717,7 +717,7 @@ footer {
     width: 100%;
     float: left;
     padding: 80px 0;
-    background: url(../images/footer_bg.jpg) top center repeat-x #e57334;
+    background: url(../images/footer_bg.jpg) top center repeat-x #ff6900;
     color: #fff; }
 
     footer #sponsors {
@@ -757,7 +757,7 @@ footer {
         width: 100%;
         float: left;
         padding: 30px 0 0;
-        border-top: 1px solid #f5c772; }
+        border-top: 1px solid #ffa300; }
 
         footer .bottom div { float: left; }
 
