--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -768,6 +768,10 @@ footer {
 /*        padding: 1.5em;*/
         display: block;
     }
+    footer .organizer-logo img {
+      max-width: 100%;
+      height: auto;
+    }
     footer .organizer-logo > svg {
         width: 100%;
         height: 100%;
