--- a/css/styleV2.css
+++ b/css/styleV2.css
@@ -358,10 +358,11 @@ video#bgvid {
 /*** HOME BANNER ***/
 section#homeBanner {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     position: relative;
-    padding: 0;
-    overflow: hidden; }
+    padding: 0 0 40px;
+/*    overflow: hidden;*/
+}
 
     section#homeBanner .content {
         z-index: 1;
